        explicitly set in the same manner that update only updates
        fields that are set.

      * as_ref() - synonym for asref()

      * select() - without any arguments returns entire table as a
        BLM::IndexedRecordHandler::Recordset

      * html_form_body_with_class() - adds class, id attributes based
        on class name
	
    - new unit tests - nn-indexedtablehander.t

    - Bedrock::Model
      Bedrock::Model::Migration
      Bedrock::Model::Field
      Bedrock::Model::Role
      Bedrock::Model::Serializer::MySQL
      bedrock-model.pl
      
      Attempt at creating a way to encapsulate the database model in
      the classes that implement MySQL table handlers...this is WIP.
      
    Fixes:

-----------------------------------------------------------------------
bedrock 3.0.0

    Enhancements:

    - Experimental log spooling using Redis: Bedrock traditionally
      created a log for each page it parsed.  As of 2.4.2.01, Bedrock
      can log all messages to a single log file.  It may be desirable
      to off-load the dispatching of messages from Bedrock and
      additionally provide a mechanism for more detailed event
      information.

      Using the Redis PUB/SUB feature, TagX::Log can now optionally
      publish messages to a Redis channel.  Instead (or in addition
      to) writing to a single or multiple log files on the file
      system, Bedrock will publish the messages that are logged during
      page parsing to a Redis channel.  Subscribers (if any) can do
      what they will with these messages.  A typical subscriber might
      look like this:

          #!/usr/bin/perl
          
          use Redis;
          use JSON;
          use Data::Dumper;
          use Date::Format;
          
          my $redis = new Redis(server => 'localhost:6379');
          
          $redis->psubscribe('bedrock/log/*', sub {
                               my ($message, $topic) = @_;
          