@@ -1847,6 +1847,23 @@ sub key_fields {
   return Bedrock::Array->new(@keys);
 }
 
+
+=pod
+
+=head2 max_id
+
+ max_id()
+
+Returns the highest value for the id column in the table.
+
+=cut
+
+sub max_id {
+  my $self = shift;
+  
+  return $self->select("select max(id) id from " . $self->get_table_name)->{id};
+}
+
 sub set_search_field {
   my $self = shift;
   my ($exact_flag, $field) = @_;
