@@ -30,7 +30,9 @@ bedrock 3.0.1
 
       * html_form_body_with_class() - adds class, id attributes based
         on class name
-	
+
+      * max_id() - return the highest value id
+ 
     - new unit tests - nn-indexedtablehander.t
 
     - Bedrock::Model
